[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Levels/Control_Flow/1 - Intro to If Statements.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/IDE.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelControl.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Background.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Forward.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/CallIf.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Robot.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/CodeBlockBar.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Grid.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/TextBox.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelClearedPopup.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Interact.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Level_Components/IDE_Elements/IfBlock.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Door.tscn" type="PackedScene" id=15]

[node name="1 - Intro to If Statements" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 5 )]

[node name="Grid" parent="." instance=ExtResource( 10 )]

[node name="Robot" parent="Grid" instance=ExtResource( 8 )]

[node name="Door" parent="Grid" instance=ExtResource( 15 )]

[node name="Button1" parent="Grid" instance=ExtResource( 3 )]

[node name="Button2" parent="Grid" instance=ExtResource( 3 )]

[node name="Level Control" parent="." instance=ExtResource( 4 )]

[node name="IDE" parent="." instance=ExtResource( 2 )]

[node name="If1" parent="IDE" instance=ExtResource( 14 )]
margin_top = 513.0
margin_bottom = 788.0

[node name="CodeBlockBar" parent="." instance=ExtResource( 9 )]

[node name="Forward" parent="CodeBlockBar" instance=ExtResource( 6 )]

[node name="Interact" parent="CodeBlockBar" instance=ExtResource( 13 )]

[node name="Call_If1" parent="CodeBlockBar" instance=ExtResource( 7 )]

[node name="TextBox" parent="." instance=ExtResource( 11 )]

[node name="PopupMenu" parent="." instance=ExtResource( 12 )]
